--- a/overlay/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay/lineage-sdk/lineage/res/res/values/config.xml
@@ -16,6 +16,7 @@
      limitations under the License.
 -->
 <resources>
+
     <!-- All the capabilities of the LEDs on this device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following capabilities present:
@@ -29,4 +30,7 @@
          For example, a device with notification and battery lights that supports
          pulsating and RGB control would set this config to 75. -->
     <integer name="config_deviceLightCapabilities">75</integer>
+
+    <!-- BurnIn protection. This should be enabled on devices that have OLED displays -->
+    <bool name="config_enableBurnInProtection">true</bool>
 </resources>
